--- a/app/app.css
+++ b/app/app.css
@@ -12,6 +12,10 @@ html {
   box-sizing: inherit;
 }
 
+.leaflet-container {
+  height: 400px;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
